refactor(project): integrate issue agents, branch goals and resource reads